--- a/dom.html
+++ b/dom.html
@@ -44,8 +44,11 @@
       const h2 = document.createElement('h2'); //새로운 태그 생성
       h2.setAttribute('class', 'title'); //클래스 생성 <h2 class="title"></h2>
       h2.textContent = 'This is title'; //텍스트 입력 <h2 class="title">This is title</h2>
+      // section.appendChild(h2); //section에 h2추가
 
-      section.appendChild(h2); //section에 h2추가
+      //h1과 h3사이에 추가하려면(동적으로)
+      const h3 = document.querySelector('h3');
+      section.insertBefore(h2, h3);
     </script>
   </body>
 </html>
